Spike Topic Buttons

--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -95,6 +95,11 @@ button {
   }
 }
 
+.topic {
+  font-size: 16px;
+  padding: 8px 16px;
+}
+
 #best-practices {
   padding: 3em 0.7em;
   margin-left: -13em;
