Show Best Practices Data
* Restructure JSON to include best practices
* Update display to show a best practice from sub-topic

--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -100,6 +100,17 @@ button {
   padding: 8px 16px;
 }
 
+.selected-topic {
+  font-size: 16px;
+  padding: 8px 16px;
+  background: black;
+}
+
+.sub-topic {
+  font-size: 16px;
+  padding: 8px 16px;
+}
+
 #best-practices {
   padding: 3em 0.7em;
   margin-left: -13em;
