GitHub Pages Fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     {{ content }}
 
     <div id="root"></div>
-    <script type="text/javascript" src="/assets/javascripts/bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./assets/javascripts/bundle.js" charset="utf-8"></script>
   </body>
 </html>
