Make Best Practices Responsive
* Make Best Practices Work on Mobile

--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -28,16 +28,21 @@ button {
 }
 
 .housing-best-practices {
-  display: flex;
+  @media #{$desktop} {
+    display: flex;
+  }
 }
 
 .button-container {
-  width: 33%;
+  @media #{$desktop} {
+    width: 33%;
+  }
 }
 
 .best-practices {
-  width: 65%;
-
+  @media #{$desktop} {
+    width: 65%;
+  }
   img {
     max-width: 100%;
   }
