--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -6,7 +6,11 @@ body {
   font-family: sans-serif;
   color: #707070;
   margin: 0 auto;
-  width: 90%;
+  @media #{$desktop} {
+    width: 75em;
+  }
+  width: 20em;
+  font-size: 16px;
 }
 
 button {
@@ -68,8 +72,6 @@ button {
   padding: 1em;
   margin: 1em 0.1em;
   @media #{$desktop} {
-    width: 60%;
-    margin: 2em 5em;
     padding: 2em 5em;
   }
   border: 0.1em solid;
@@ -94,18 +96,22 @@ button {
   flex-wrap: wrap;
   align-items: center;
   @media #{$desktop} {
-    width: 80%;
     justify-content: flex-end;
   }
 }
 
 .task-force-member {
   @media #{$desktop} {
-    width: 10em;
-    height: 10em;
-    border: 0.1em solid;
-    object-fit: cover;
+    width: 8em;
+    height: 8em;
+
   }
+  width: 6em;
+  height: 6em;
+  border: 0.1em solid;
+  object-fit: cover;
+  border-radius: 50%;
+  margin: 1em;
 }
 
 .task-force-text {
