--- a/_sass/slide-show.scss
+++ b/_sass/slide-show.scss
@@ -3,32 +3,34 @@
 }
 
 .next {
-  margin-top: 12.9em;
+  position: fixed;
+  bottom: 0;
 }
 
 .previous {
-  margin-top: 12.9em;
+  position: fixed;
+  bottom: 0;
 }
 
 .slide {
-  width: 80em;
-  height: 30em;
-}
-
-.slide-show.full-screen {
-  width: 100vw;
-  height: 100vw;
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(51,51,51,0.7);
   z-index: 10;
 }
 
 #slide-number-1 {
   background-image: url("../images/hartford-ct.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 #slide-number-2 {
   background-image: url("../images/hartford-ct-2.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
 }
