--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -144,12 +144,30 @@ h1 {
 }
 
 #best-practices {
-  margin: 2em 0;
   @media #{$desktop} {
-    padding: 3em 0.7em;
-    margin-left: -13em;
-    margin-top: -40em;
+    padding: 3.1em 3.1em;
+    margin-left: -17em;
+    margin-top: -50em;
     position: absolute;
+    background: url("../images/best-practices-background.svg") no-repeat;
+    color: white;
+    a {
+      margin-left: 80px;
+      color: white;
+    }
+    img {
+      margin-top: -2.9em;
+      margin-left: 6em;
+    }
+    h3 {
+      margin-left: 80px;
+    }
+  }
+  img {
+    height: 140px;
+  }
+  h3 {
+    margin-bottom: 0em;
   }
 }
 
