--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -8,7 +8,7 @@ body {
   width: 16em;
   font-size: 16px;
   @media #{$desktop} {
-    width: 75em;
+    width: 73em;
   }
 }
 
@@ -25,6 +25,10 @@ button {
 
 h1 {
   font-size: 40px;
+}
+
+li {
+  padding: 0.5em 0;
 }
 
 .box {
@@ -172,11 +176,29 @@ h1 {
 }
 
 #housing {
-  margin: 2em 0;
   @media #{$desktop} {
-    margin-left: 87%;
-    margin-top: -70em;
+    margin-left: 55em;
+    margin-top: -45em;
     position: absolute;
+    background: url("../images/housing-background.svg") no-repeat;
+    padding: 12em 12em;
+    img {
+      margin-top: -6em;
+    }
+    h3 {
+      color: white;
+      width: 10em;
+      padding: 0;
+      margin-bottom: 0;
+      margin-left: -70px;
+    }
+    a {
+      color: white;
+      margin-left: -70px;
+    }
+  }
+  img {
+    height: 140px;
   }
 }
 
