Resolve #13 Make Clickable Bubbles
This commit resolves #13 by making the entire divs for the best practices and housing clickable.

--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -155,7 +155,7 @@ li {
     position: absolute;
     background: url("../images/best-practices-background.svg") no-repeat;
     color: white;
-    a {
+    span {
       margin-left: 80px;
       color: white;
     }
@@ -192,7 +192,7 @@ li {
       margin-bottom: 0;
       margin-left: -70px;
     }
-    a {
+    span {
       color: white;
       margin-left: -70px;
     }
