Update Best Practices CSS to Conform to Template
* Uppercase text
* Inverted button design
* Change stacking of best practices

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,4 +4,5 @@
 @import "front";
 @import "slide-show";
 @import "municipality";
+@import "best-practices";
 @import url('https://fonts.googleapis.com/css?family=Roboto');
