Resolve #17 Semantic HTML
This updates divs to use more descriptive semantic HTML per Ian’s suggestion.

--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -40,7 +40,7 @@ button {
 
 .compact {
   padding: 1em;
-  margin: 1em 0.1em;
+  margin: 0 0.1em;
   position: relative;
   @media #{$desktop} {
     padding: 2em 5em;
