Resolve #19 Use Div for Max-Width
Instead of styling the body with max-width this commit styles a div and then moves the mayor div which acts differently into a sub-container.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="{{ site.url }}/css/main.css">
   </head>
   <body>
+    <div class="container">
     {{ content }}
+    </div>
   </body>
 </html>
