--- a/_sass/front.scss
+++ b/_sass/front.scss
@@ -4,13 +4,8 @@ $phone: "(max-width: 768px)";
 
 body {
   font-family: 'Roboto', sans-serif;
-  margin: 0 auto;
-  width: 16em;
   font-size: 16px;
   color: #002D40;
-  @media #{$desktop} {
-    width: 73em;
-  }
 }
 
 h1 {
@@ -45,6 +40,14 @@ button {
   position: relative;
   @media #{$desktop} {
     padding: 2em 5em;
+  }
+}
+
+.container {
+  margin: 0 auto;
+  width: 16em;
+  @media #{$desktop} {
+    width: 73em;
   }
 }
 
