Fix Selected Topic Background Color

--- a/_sass/best-practices.scss
+++ b/_sass/best-practices.scss
@@ -57,7 +57,7 @@
 .selected-topic {
   font-size: 16px;
   padding: 0.5em 1em;
-  background: #002D40;
+  background: #81B7B7;
   border: 1px solid #002D40;
   text-transform: uppercase;
 }
