--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,6 @@
 // Imports
-@import "front";
-@import "slide-show";
-@import "municipality";
-@import "best-practices";
+@import 'global';
+@import 'home/all';
+@import 'Header';
+@import 'Home';
 @import url('https://fonts.googleapis.com/css?family=Roboto');
