--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,4 +3,5 @@
 @import 'home/all';
 @import 'Header';
 @import 'Home';
+@import 'best-practices/Topics';
 @import url('https://fonts.googleapis.com/css?family=Roboto');
