--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,5 +3,5 @@
 @import 'home/all';
 @import 'Header';
 @import 'Home';
-@import 'best-practices/Topics';
+@import 'best-practices/all';
 @import url('https://fonts.googleapis.com/css?family=Roboto');
