--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,4 +4,4 @@
 @import 'Header';
 @import 'Home';
 @import 'best-practices/all';
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
