--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -3,8 +3,16 @@ $desktop: "(min-width: 1024px)";
 $phone: "(max-width: 768px)";
 $text-color: #002D40;
 $palette-yellow: #ECCF54;
-$palette-green: #ECCF54;
+$palette-green: #4eab8c;
+$palette-red: #e46c57;
+$palette-blue: #4685a5;
 $underline-hover-transition-speed: 0.25s;
+
+$container-width: 42rem;
+$container-generous-width: 72rem;
+$standard-padding: 1rem;
+$bubble-width: ($container-generous-width - $container-width) / 2 - $standard-padding;
+
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -61,9 +69,9 @@ a {
 .container {
   padding-left: 1rem;
   padding-right: 1rem;
-  max-width: 42rem;
+  max-width: $container-width;
   margin: 0 auto;
   &.generous {
-    max-width: 72rem
+    max-width: $container-generous-width;
   }
 }
