Add new task force members

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -5,11 +5,11 @@ $text-color: #002D40;
 $palette-yellow: #ECCF54;
 $palette-green: #4eab8c;
 $palette-red: #e46c57;
-$palette-blue: #4685a5;
+$palette-blue: #195274;
 $underline-hover-transition-speed: 0.25s;
 
 $container-width: 42rem;
-$container-generous-width: 72rem;
+$container-generous-width: 80rem;
 $standard-padding: 1rem;
 $bubble-width: ($container-generous-width - $container-width) / 2 - $standard-padding;
 
