--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -1,7 +1,7 @@
 .component.Header {
-  padding: 3rem 2rem 4rem 2rem;
+  padding: 4rem;
   display: flex;
-  max-width: 96rem;
+  max-width: $container-generous-width;
   margin: 0 auto;
   h1 {
     font-weight: 700;
