--- a/src/sass/home/TaskForceSection.scss
+++ b/src/sass/home/TaskForceSection.scss
@@ -1,4 +1,6 @@
 .component.TaskForceSection {
+  display: flex;
+  justify-content: center;
   .heading-container {
     flex: 1;
     margin: 0 0 0 2rem;
@@ -14,12 +16,11 @@
     }
   }
 
-
-  .row-1 {
+  .row-2 {
     display: flex;
     align-items: center;
   }
-  .row-2 {
+  .row-1, .row-3 {
     .task-force-members a:first-child {
       @media #{$desktop} {
         margin-left: 4rem;
