--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,6 +1,9 @@
-$tablet: "(min-width: 768px) and (max-width: 1023px)";
+$tablet: "(min-width: 768px) and (max-width: 1100px)";
 $desktop: "(min-width: 1024px)";
 $phone: "(max-width: 768px)";
+
+$layout-tablet: "(max-width: 70rem)";
+
 $text-color: #002D40;
 $palette-yellow: #ECCF54;
 $palette-green: #4eab8c;
