--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,4 +4,5 @@
 @import 'Header';
 @import 'Home';
 @import 'best-practices/all';
+@import 'story/all';
 @import url('https://fonts.googleapis.com/css?family=Roboto');
