Cleanup existing topic button code

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -5,10 +5,14 @@ $phone: "(max-width: 768px)";
 $layout-tablet: "(max-width: 70rem)";
 
 $text-color: #002D40;
+$bg-color: white;
 $palette-yellow: #ECCF54;
 $palette-green: #4eab8c;
 $palette-red: #e46c57;
 $palette-blue: #195274;
+$palette-blue-light: mix(white, $palette-blue, 10);
+$palette-blue-dark: mix(black, $palette-blue, 10);
+
 $underline-hover-transition-speed: 0.25s;
 
 $container-width: 42rem;
