--- a/src/sass/best-practices/Topics.scss
+++ b/src/sass/best-practices/Topics.scss
@@ -1,4 +1,10 @@
 .component.Topics {
+
+  &.container {
+    max-width: 70rem; 
+    padding: 0 5rem;
+  }
+
   .best-practices {
     @media #{$desktop} {
       display: flex;
@@ -6,32 +12,50 @@
     }
   }
 
-  .topic-buttons {
+  .button-container {
     @media #{$desktop} {
       width: 50em;
     }
   }
 
-  .sub-topic-buttons {
-    @media #{$desktop} {
-      width: 50em;
-    }
+  h3 {
+    margin: 0 auto;  
   }
 
   .topic {
+    $topic_margin: .4em;
+
+    margin: $topic_margin 0;
+    margin-right: $topic_margin * 2;
+    padding: ($topic_margin + .1) ($topic_margin * 2) $topic_margin;
+
+    color: $text-color;
     font-size: 16px;
-    padding: 0.5em 1em;
-    background: white;
-    color: #002D40;
-    border: 1px solid #002D40;
     text-transform: uppercase;
+
+    background: $bg-color;
+    border: 1px solid $text-color;
+    cursor: pointer;
+    outline: none;
+
+    &:hover, &:focus {
+      color: $bg-color;
+
+      background: $palette-blue-light;
+      border-color: $palette-blue-light;
+    }
+
+    &.selected {
+      color: $bg-color;
+
+      background: $palette-blue;
+      border-color: $palette-blue;
+
+      &:hover, &:focus {
+        background: $palette-blue-dark; 
+        border-color: $palette-blue-dark;
+      }
+    }
   }
 
-  .selected-topic {
-    font-size: 16px;
-    padding: 0.5em 1em;
-    background: #81B7B7;
-    border: 1px solid #002D40;
-    text-transform: uppercase;
-  }
 }
