--- a/src/sass/best-practices/BestPractice.scss
+++ b/src/sass/best-practices/BestPractice.scss
@@ -1,27 +1,53 @@
 .component.BestPractice {
-  border: 0.2em solid;
-  margin-top: 1em;
-  margin-right: 1em;
-  @media #{$desktop} {
-    display: flex;
+
+  display: flex;
+
+  min-height: 15rem;
+  border: 0.3em solid;
+
+  * { box-sizing: border-box; }
+
+
+  &:nth-of-type(3n+1) {
+    color: $palette-blue;
+    border-color: $palette-blue; 
+
+    .best-practice-image { background-image: url('/assets/images/blue-best-practice.jpg'); }
+  }
+
+  &:nth-of-type(3n+2) {
+    color: $palette-red; 
+    border-color: $palette-red;
+
+    .best-practice-image { background-image: url('/assets/images/red-best-practice.jpg'); }
+  }
+
+  &:nth-of-type(3n) {
+    color: $palette-green; 
+    border-color: $palette-green;
+
+    .best-practice-image { background-image: url('/assets/images/green-best-practice.jpg'); }
   }
 
   .best-practice-description {
-    padding: 1em;
-    @media #{$desktop} {
-      width: 16em;
+    flex: 1 0 70%;
+    padding: $standard-padding; 
+
+    h4 { 
+      margin-bottom: 0;
+
+      font-size: 1.2rem;
+      text-transform: uppercase; 
     }
   }
 
   .best-practice-image {
-    img {
-      width: 100%;
-    }
-    @media #{$desktop} {
-      width: 14em;
-      img {
-        width: 14em;
-      }
-    }
+    flex: 1 0 30%;
+    width: 100%;
+
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
   }
+
 }
