--- a/src/sass/story/slide.scss
+++ b/src/sass/story/slide.scss
@@ -7,21 +7,31 @@
   background-position: center;
   width: 100vw;
   height: 100vh;
+
   h1 {
     background: white;
     margin-left: 20%;
     display: inline-block;
   }
-}
 
-#slide-number-0 {
-  background-image: url("../assets/images/hartford-ct.jpg");
-}
+  .slide-content {
+  
+  }
 
-#slide-number-1 {
-  background-image: url("../assets/images/boston.jpg");
-}
+  .slide-controls {
+    position: absolute;
+    bottom: $standard-padding;
+  }
 
-#slide-number-2 {
-  background-image: url("../assets/images/new-york-city.jpg");
+  &[data-slide="0"] {
+    background-image: url("../assets/images/hartford-ct.jpg");
+  }
+
+  &[data-slide="1"] {
+    background-image: url("../assets/images/boston.jpg");
+  }
+
+  &[data-slide="2"] {
+    background-image: url("../assets/images/new-york-city.jpg");
+  }
 }
