Make Compact Section Mobile Responsive
* Update lines below headers to be width of the text and to be larger if the main headers versus list headers.
* Do not display bubbles on mobile size screen.
* Remove bubble margins on mobile screen
* Up font-size on mobile screen for easy review.
* Convert bold tags in content lists to headers to push content to next lines and more easily style them

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -40,17 +40,7 @@ h2 {
   font-size: 1.5rem;
   position: relative;
   display: inline-block;
-  &::after {
-    content: " ";
-    display: block;
-    position: absolute;
-    bottom: 0.1em; // Relative to the size of the font
-    left: -1em; // Relative to the size of the font
-    height: 0.3em; // Relative to the size of the font
-    width: calc(100% + 1.5em);
-    z-index: -10;
-    background-color: $palette-green;
-  }
+  border-bottom: 0.3em solid $palette-green;
 }
 
 li {
