--- a/src/sass/home/Member.scss
+++ b/src/sass/home/Member.scss
@@ -2,15 +2,12 @@
   padding: 0.4rem 1rem;
   font-size: 0.8rem;
   text-align: center;
+  width: 10rem;
   img {
     width: 8rem;
     height: 8rem;
     object-fit: cover;
     border-radius: 50%;
-    // @media #{$layout-tablet} {
-    //   width: 5rem;
-    //   height: 5rem;
-    // }
   }
   .name-title {
     margin-top: 0.4em;
@@ -18,5 +15,4 @@
       font-weight: 700;
     }
   }
-
 }
