--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -1,72 +1,28 @@
 .component.Header {
-  padding: 4rem;
-  display: flex;
   max-width: $container-generous-width;
-  margin: 0 auto;
   h1 {
-    font-weight: 700;
-    margin: 0;
-    position: relative;
+    text-transform: uppercase;
+    font-size: 16px;
     display: inline-block;
-    &::after {
-      content: " ";
-      display: block;
-      position: absolute;
-      bottom: 0.1em;
-      left: -1em;
-      height: 0.3em;
-      width: 110%;
-      z-index: -10;
-      -webkit-transition: left $underline-hover-transition-speed;
-      transition: left $underline-hover-transition-speed;
-    }
-    &.yellow::after {
-      background-color: $palette-yellow;
-    }
-    .subtle {
-      font-size: 1rem;
-    }
+    margin: 0;
   }
-  a:hover {
-    h1::after {
-      left: -1rem;
-    }
+  img {
+    height: 2em;
+    padding-right: 1em;
   }
   nav {
-    flex: 1;
     ul {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      list-style-type: none;
-      li {
-        a {
-          font-weight: 700;
-          position: relative;
-          display: inline-block;
-          &::after {
-            content: " ";
-            display: block;
-            position: absolute;
-            bottom: 0em;
-            left: -0.2em;
-            height: 0.4em;
-            width: 100%;
-            z-index: -10;
-            -webkit-transition: left $underline-hover-transition-speed;
-            transition: left $underline-hover-transition-speed;
-            background-color: $palette-yellow;
-          }
-          &:hover {
-            &::after {
-              left: 0.2rem;
-            }
-          }
-        }
-        &:not(:last-child) {
-          margin-right: 1rem;
-        }
-      }
+      background: #f8f8f8;
+      border-top: 2px solid #d0e4ea;
+      padding: 1em;
+      margin-top: 0;
     }
+    ul li {
+      display: inline;
+      padding: 0 1.5em;
+    }
+  }
+  .title {
+    padding: 1em;
   }
 }
