Restyle Intro Section
* Change font to be centered and reflect new style guide.
* Add background image.

--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -16,6 +16,7 @@
       border-top: 2px solid #d0e4ea;
       padding: 1em;
       margin-top: 0;
+      margin-bottom: 0;
     }
     ul li {
       display: inline;
