--- a/src/sass/home/IntroSection.scss
+++ b/src/sass/home/IntroSection.scss
@@ -1,13 +1,14 @@
 .component.IntroSection {
-  background-color: $palette-blue;
-  color: white;
+  background: url('/assets/images/skyline.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
   padding: 3rem 0;
-  margin: 2rem 0;
+  margin: 0 0 2em 0;
+  text-align: center;
   h2 {
-    margin: 0 0 0.4rem 0;
-    &::after {
-      display: none;
-    }
+    border: none;
+    padding: 0;
+    margin: 0.2em 0;
   }
   p {
     margin: 0;
