Mobile Style Adjustments
* Two signatures side by side in mobile view
* Adjust header text size
* Switch to rocket ship stacking of things
* Center mobile navigation
* Reduce font sizes
* Increase margin between Task Force and Compact sections

--- a/src/sass/home/CompactSection.scss
+++ b/src/sass/home/CompactSection.scss
@@ -28,15 +28,21 @@
     }
   }
 
-  
+
   ol { margin: 2em auto; }
 
-  li { 
-    line-height: 1.6em; 
+  li {
+    line-height: 1.6em;
 
     & + li { margin-top: .5em; }
   }
-  
+
+  h2 {
+    @media #{$phone} {
+      margin-top: 3em;
+    }
+  }
+
 
   .bubble.best-practices {
     width: $bubble-width * 2;
