--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -1,10 +1,12 @@
 .component.Header {
-  max-width: $container-generous-width;
   h1 {
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 14px;
     display: inline-block;
     margin: 0;
+    @media #{$desktop} {
+      font-size: 20px;
+    }
   }
   img {
     height: 2em;
@@ -14,12 +16,12 @@
     ul {
       background: #f8f8f8;
       border-top: 2px solid #d0e4ea;
-      padding: 1em;
-      margin-top: 0;
-      margin-bottom: 0;
+      padding: 1em 1.5em;
+      margin: 0 auto;
     }
     ul li {
       display: inline;
+      text-align: center;
       padding: 0 1.5em;
     }
   }
