--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -41,14 +41,23 @@ h2 {
   position: relative;
   display: inline-block;
   border-bottom: 0.3em solid $palette-green;
+  @media #{$phone} {
+    font-size: 1.25rem;
+  }
 }
 
 li {
   padding: 0.5em 0;
+  @media #{$phone} {
+    font-size: 16px;
+  }
 }
 
 p {
   line-height: 1.9em;
+  @media #{$phone} {
+    font-size: 16px;
+  }
 }
 
 a {
