--- a/src/sass/home/IntroSection.scss
+++ b/src/sass/home/IntroSection.scss
@@ -2,17 +2,32 @@
   background: url('/assets/images/skyline.jpg');
   background-size: cover;
   background-position: 50% 50%;
-  padding: 3rem 0;
+  padding: 3em 0;
+
   margin: 0 0 2em 0;
   text-align: center;
   h2 {
     border: none;
     padding: 0;
     margin: 0.2em 0;
+    font-size: 16px;
+    @media #{$desktop} {
+      font-size: 40px;
+      font-weight: 200;
+    }
   }
   p {
     margin: 0;
     font-size: 1.3rem;
     font-style: italic;
+    font-size: 16px;
+    line-height: 16px;
+    @media #{$desktop} {
+      font-size: 18px;
+      font-weight: 200;
+    }
+  }
+  @media #{$desktop} {
+    padding: 12em 0;
   }
 }
