--- a/src/sass/home/TaskForceSection.scss
+++ b/src/sass/home/TaskForceSection.scss
@@ -4,12 +4,21 @@
     margin: 0 auto 2em auto;
     display: block;
     width: max-content;
+    @media #{$phone} {
+      font-size: 20px
+    }
   }
   .task-force-members {
     display: flex;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
     justify-content: center;
-    max-width: 80em;
     margin: 0 auto;
+    max-width: 80em;
+    a:first-child {
+      margin-left: 1em;
+    }
+    @media (max-width: 1382px) {
+      max-width: 40em;
+    }
   }
 }
