Set Municipality Name Spacing and Colors
This commit sets the color ands pacing of the municipality names.

--- a/src/sass/home/Member.scss
+++ b/src/sass/home/Member.scss
@@ -20,23 +20,30 @@
   }
 
   .image-container {
-    position: relative;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 1px solid black;
     width: 8rem;
-    height: 8rem;
+    height: 9.4rem;
+    @media #{$phone} {
+      position: relative;
+      height: 8rem;
+      border-radius: 50%;
+      overflow: hidden;
+      border: 1px solid black;
+    }
   }
 
   .municipality-name {
-    position: absolute;
-    bottom: -57%;
-    left: 50%;
-    background-color: white;
-    transform: translate(-50%, -50%);
+    margin-top: 0.4em;
     text-transform: uppercase;
-    padding: 0.25em 0 0 0;
-    height: 50%;
-    width: 100%;
+    font-weight: 700;
+    @media #{$phone} {
+      position: absolute;
+      bottom: -57%;
+      left: 50%;
+      background-color: white;
+      transform: translate(-50%, -50%);
+      padding: 0.25em 0 0 0;
+      height: 50%;
+      width: 100%;
+    }
   }
 }
