--- a/src/sass/home/CompactSection.scss
+++ b/src/sass/home/CompactSection.scss
@@ -1,5 +1,7 @@
 .component.CompactSection {
   overflow: hidden;
+  background-color: #edf5f5;
+  margin-top: 2em;
 
   .container {
     position: relative;
@@ -54,9 +56,7 @@
   }
 
   h2 {
-    @media #{$phone} {
-      margin-top: 3em;
-    }
+    margin-top: 1.5em;
   }
 
 
