--- a/src/sass/home/IntroSection.scss
+++ b/src/sass/home/IntroSection.scss
@@ -10,9 +10,9 @@
     border: none;
     padding: 0;
     margin: 0.2em 0;
-    font-size: 16px;
+    font-size: 1rem;
     @media #{$desktop} {
-      font-size: 40px;
+      font-size: 2.5rem;
       font-weight: 200;
     }
   }
@@ -20,10 +20,10 @@
     margin: 0;
     font-size: 1.3rem;
     font-style: italic;
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 1rem;
+    line-height: 1rem;
     @media #{$desktop} {
-      font-size: 18px;
+      font-size: 1.125rem;
       font-weight: 200;
     }
   }
