Refactor to use color names and classes
This refactors the code to use color names and classes for easier code readability.

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -74,3 +74,19 @@ a {
     max-width: $container-generous-width;
   }
 }
+
+.green {
+  color: $palette-green;
+}
+
+.yellow {
+  color: $palette-yellow;
+}
+
+.red {
+  color: $palette-red;
+}
+
+.blue {
+  color: $palette-blue;
+}
